feat: clean code