@@ -3,7 +3,6 @@ package com.alexpantoja.prueba_inditex.infrastructure.rest.handler;
 import com.alexpantoja.prueba_inditex.domain.exception.PriceNotFoundException;
 import java.time.LocalDateTime;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -17,18 +16,20 @@ import org.springframework.web.method.annotation.MethodArgumentTypeMismatchExcep
 public class GlobalExceptionHandler {
 
   @ExceptionHandler(PriceNotFoundException.class)
-  public ResponseEntity<?> handlePriceNotFoundException(PriceNotFoundException ex) {
+  public ResponseEntity<Map<String, Object>> handlePriceNotFoundException(
+      PriceNotFoundException ex) {
     log.warn("Price not found: {}", ex.getMessage());
     return buildResponse(HttpStatus.NOT_FOUND, "Price Not Found", ex.getMessage());
   }
 
   @ExceptionHandler(MethodArgumentNotValidException.class)
-  public ResponseEntity<?> handleValidationException(MethodArgumentNotValidException ex) {
+  public ResponseEntity<Map<String, Object>> handleValidationException(
+      MethodArgumentNotValidException ex) {
     log.warn("Validation failed: {}", ex.getMessage());
     var errors =
         ex.getBindingResult().getFieldErrors().stream()
             .map(err -> err.getField() + ": " + err.getDefaultMessage())
-            .collect(Collectors.toList());
+            .toList();
 
     return ResponseEntity.status(HttpStatus.BAD_REQUEST)
         .body(
@@ -47,13 +48,13 @@ public class GlobalExceptionHandler {
     MethodArgumentTypeMismatchException.class,
     MissingServletRequestParameterException.class
   })
-  public ResponseEntity<?> handleBadRequest(Exception ex) {
+  public ResponseEntity<Map<String, Object>> handleBadRequest(Exception ex) {
     log.warn("Bad request: {}", ex.getMessage());
     return buildResponse(HttpStatus.BAD_REQUEST, "Bad Request", ex.getMessage());
   }
 
   @ExceptionHandler(Exception.class)
-  public ResponseEntity<?> handleGeneralException(Exception ex) {
+  public ResponseEntity<Map<String, Object>> handleGeneralException(Exception ex) {
     log.error("Unexpected error: {}", ex.getMessage(), ex);
 
     if (ex instanceof PriceNotFoundException pne) {
